[tool.poetry]
name = "docker-tasks"
version = "0.1.0"
description = "Run periodic tasks via docker exec"
authors = ["Reimund Klain <reimund.klain@condevtec.de>"]
license = "BSD"
readme = "README.rst"

[tool.poetry.scripts]
docker-tasks = "docker_tasks.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.1.3"
pyparsing = "^3.1.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-runner = "^6.0.1"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
